--- a/src/app/components/ITaskComponent/taskStyles.css
+++ b/src/app/components/ITaskComponent/taskStyles.css
@@ -6,6 +6,7 @@
   background-color: rgb(16, 16, 16);
   border: 1px solid rgb(90, 90, 90);
   color: white;
+  cursor: pointer;
 }
 
 .task-menu {
@@ -24,7 +25,7 @@
   border-radius: 10px 0px 0px 0px;
   width: 100%;
   height: 100%;
-  background: rgb(51, 51, 51);
+  background: rgb(105, 105, 105);
   border: none;
   cursor: pointer;
 }
@@ -44,6 +45,10 @@
   background: none;
   border: none;
   cursor: pointer;
+}
+
+.btn-menu:hover {
+  background-color: rgb(47, 46, 46);
 }
 
 .btn-edit {
